<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/bll"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#0D1B67"
        android:textSize="16sp"
        tools:text="89%"
        app:layout_constraintEnd_toEndOf="@+id/tvBillAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvBillAmount" />

    <TextView
        android:id="@+id/tvPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/people"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTipPercent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercent" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tvPeople"
        app:layout_constraintTop_toBottomOf="@+id/tvPeople" />

    <TextView
        android:id="@+id/tvPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/per_person"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTipAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvTipAmount" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_cost"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPerPerson"
        app:layout_constraintTop_toBottomOf="@+id/tvPerPerson" />

    <Button
        android:id="@+id/buttonRoundUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:text="@string/round_up"
        app:layout_constraintEnd_toStartOf="@+id/buttonRoundDown"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />

    <EditText
        android:id="@+id/inputBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/bill"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/tvBillAmount"
        app:layout_constraintTop_toTopOf="@id/tvBillAmount"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <SeekBar
        android:id="@+id/seekbarTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercent"
        app:layout_constraintStart_toStartOf="@+id/inputBillAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercent" />

    <EditText
        android:id="@+id/inputPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_of_people"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/tvPeople"
        app:layout_constraintStart_toStartOf="@+id/seekbarTip"
        app:layout_constraintTop_toTopOf="@+id/tvPeople" />

    <TextView
        android:id="@+id/calculatedTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="50"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipAmount"
        app:layout_constraintStart_toStartOf="@+id/inputPeople"
        app:layout_constraintTop_toTopOf="@+id/tvTipAmount" />

    <TextView
        android:id="@+id/calcPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="5"
        app:layout_constraintBottom_toBottomOf="@+id/tvPerPerson"
        app:layout_constraintStart_toStartOf="@+id/calculatedTip"
        app:layout_constraintTop_toTopOf="@+id/tvPerPerson" />

    <TextView
        android:id="@+id/calculatedTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="250"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotal"
        app:layout_constraintStart_toStartOf="@+id/calcPerPerson"
        app:layout_constraintTop_toTopOf="@+id/tvTotal" />

    <Button
        android:id="@+id/buttonRoundDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/round_down"
        app:layout_constraintStart_toEndOf="@+id/buttonRoundUp"
        app:layout_constraintStart_toStartOf="@+id/calculatedTotal"
        app:layout_constraintTop_toBottomOf="@+id/calculatedTotal" />
</androidx.constraintlayout.widget.ConstraintLayout>